# learning-code

./: .gitattributes  .gitignore  README.md  TODO  async_test.py  pool-async-test.py  print-test.py  test-cuda.py  test_async_class.py
3d-web/: .gitattributes  README.md
3d-web/threejs-tutorial/: .gitignore  package.json  test.html
3d-web/threejs-tutorial/src/: main.js  style.css  test.js
asyncio/: asyncio_test.py
bash/: color.sh  loop_thru_file.sh  template.sh  template_2.sh
code-profiling/: Profiling and optimizing your Python code.ipynb
computer-vision/: view_bounding_box.py
computer-vision/utils/: __init__.py
cpp-example/: .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conan-cheat-sheet.md  conanfile.py
cpp-example/source/app/: CMakeLists.txt
cpp-example/source/app/src/: example_app.cpp
cpp-example/source/lib/: CMakeLists.txt
cpp-example/source/lib/bench/: CMakeLists.txt  bench_example_lib.cpp
cpp-example/source/lib/include/cpp-example/: example_lib.hpp
cpp-example/source/lib/src/: example_lib.cpp
cpp-example/source/lib/test/: CMakeLists.txt  test_example_lib.cpp
cpp-example/tools/conan/: clang14__x86_64-pc-linux-elf__debug  clang14__x86_64-pc-linux-elf__release  gcc11__x86_64-pc-linux-elf__debug  gcc11__x86_64-pc-linux-elf__release
ffmpeg/: ffmpeg.sh
gstreamer/: test_gstreamer.py
image-corruption/: README.md  image_corrupt.py  image_corrupt_refactor.py  requirements.txt
kafka/: kafka-receive.py  kafka-send.py
python/: class_method.py  enum_tutorial.py  glob_tutorial.py  image.base64  image_base64_tutorial.py
python/compile/: pyinstaller-sample.py
python/tk-gui-app/: template.py
vms/: app.py  get_image.py  get_snapshot.py  get_snapshot_old.py  record.py  remove_corrupt.py  screenshot.py
webrtc/webrtc-learn/: package-lock.json  package.json
webrtc/webrtc-learn/src/: main.js
websocket/: client_rtsp.py  server_rtsp.py
