# ##############################################################################
# GENERAL SETTINGS
# ##############################################################################
set(BENCHAPP "${TARGET}-bench")

# ##############################################################################
# DEPENDENCIES
# ##############################################################################
find_package(benchmark REQUIRED)

# ##############################################################################
# TARGETS
# ##############################################################################
add_executable(${BENCHAPP} "")

target_sources(${BENCHAPP}
               PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/bench_example_lib.cpp)

# ##############################################################################
# LINKED LIBRARIES
# ##############################################################################
target_link_libraries(${BENCHAPP} ${TARGET} benchmark::benchmark pthread)