# ##############################################################################
# GENERAL SETTINGS
# ##############################################################################
set(TESTAPP "${TARGET}-test")

# ##############################################################################
# DEPENDENCIES
# ##############################################################################
find_package(GTest REQUIRED)

# ##############################################################################
# TARGETS
# ##############################################################################
add_executable(${TESTAPP} "")

enable_testing()
add_test(NAME ${TARGET}_tests COMMAND ${TESTAPP})

target_sources(${TESTAPP}
               PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/test_example_lib.cpp)

# ##############################################################################
# LINKED LIBRARIES
# ##############################################################################
target_link_libraries(${TESTAPP} ${TARGET} GTest::GTest GTest::gtest_main)